--- a/src/components/home.css
+++ b/src/components/home.css
@@ -23,3 +23,12 @@
     outline-color: red;
     background-color: #1b6d85;
 }
+
+.home input {
+    font-size: 20px;
+    padding: 5px;
+    border: none;
+    margin: 2px;
+    box-shadow: 0 2px 3px black;
+    width: 50vw;
+}
